--- a/pages/prodetails/prodetails.wxml
+++ b/pages/prodetails/prodetails.wxml
@@ -1,173 +1,183 @@
 <!--pages/components/prodetail/prodetails.wxml-->
 <import src="../../template/view/pro-list.wxml" />
 <import src="../../template/view/coupon.wxml" />
-<view class="container">
-  <scroll-view scroll-y="{{isShowGetCoupon?false:true}}" style="height: {{windowHeight}}px;">
-    <!-- 海报图 -->
-    <view class="header">
-      <image src="../../images/pro-poster.png" mode="widthFix"></image>
-    </view>
-    <!-- 列表信息 -->
-    <view class="info">
-      <view class="info-header">
-        <view class="top">
-          <text>{{shopName}}({{goodsName}})</text>
-          <text>{{distance}}</text>
-        </view>
-        <view class="bottom">
-          <text>￥{{price}}</text>
-          <text>月销{{monthSum}}</text>
-          <text>综合评分{{score}}</text>
-        </view>
+<block wx:if="{{loaded}}">
+  <view class="container">
+    <scroll-view scroll-y="{{isShowGetCoupon?false:true}}" style="height: {{windowHeight}}px;">
+      <!-- 海报图 -->
+      <view class="header">
+        <image src="../../images/pro-poster.png" mode="widthFix"></image>
       </view>
-      <view class="info-list" catchtap="handleLocation">
-        <view>
-          <image src="../../images/icon05.png"></image>
+      <!-- 列表信息 -->
+      <view class="info">
+        <view class="info-header">
+          <view class="top">
+            <text>{{shopName}}({{goodsName}})</text>
+            <text>{{distance}}</text>
+          </view>
+          <view class="bottom">
+            <text>￥{{price}}</text>
+            <text>月销{{monthSum}}</text>
+            <text>综合评分{{score}}</text>
+          </view>
         </view>
-        <view>
-          <text>{{address}}</text>
+        <view class="info-list" catchtap="handleLocation">
+          <view>
+            <image src="../../images/icon05.png"></image>
+          </view>
+          <view>
+            <text>{{address}}</text>
+          </view>
+          <view>
+            <image src="../../images/icons01.png"></image>
+          </view>
         </view>
-        <view>
-          <image src="../../images/icons01.png"></image>
+        <view class="info-list" catchtap="handleMakePhone">
+          <view>
+            <image src="../../images/icon06.png"></image>
+          </view>
+          <view>
+            <text>{{phone}}</text>
+          </view>
+          <view>
+            <image src="../../images/icons01.png"></image>
+          </view>
         </view>
-      </view>
-      <view class="info-list" catchtap="handleMakePhone">
-        <view>
-          <image src="../../images/icon06.png"></image>
-        </view>
-        <view>
-          <text>{{phone}}</text>
-        </view>
-        <view>
-          <image src="../../images/icons01.png"></image>
-        </view>
-      </view>
-      <view class="info-list" bindtap="handlePopCoupon">
-        <view>
-          <image src="../../images/icon07.png"></image>
-        </view>
-        <view>
-          <text>领取优惠券</text>
-        </view>
-        <view>
-          <image src="../../images/icons01.png"></image>
-        </view>
-      </view>
-    </view>
-    <!-- 本店其它商品 -->
-    <view class="products">
-      <!-- 区域标题 -->
-      <view class="area-title" wx:if="true">
-        <view class="line"></view>
-        <text>本店其它商品</text>
-        <view class="line"></view>
-      </view>
-      <!-- 商品列表 -->
-      <view class="pro-list">
-        <block wx:for="{{listData}}" wx:key="key">
-          <navigator url="./prodetails?goodsid={{item.goodsid}}&shopid={{item.shopid}}">
-            <template is="pro-list" data="{{item,index}}"></template>
-          </navigator>
-        </block>
-      </view>
-      <text class="bottom-placeholder">没有更多商品啦</text>
-    </view>
-    <!-- 购买 -->
-    <view class="buy">
-      <view catchtap="handleGoToShop">
-        <image src="../../images/icon08.png"></image>
-        <text>店铺</text>
-      </view>
-      <view catchtap="handleCollection">
-        <image src="{{isCollectioned?'../../images/icon09-active.png':'../../images/icon09.png'}}"></image>
-        <text style="color:{{isCollectioned?'#02c1c9':'#666'}};">{{isCollectioned?'已收藏':'收藏'}}</text>
-      </view>
-      <view catchtap="handlePopBuyLayer">
-        <text>立即购买</text>
-      </view>
-    </view>
-    <!-- 领取优惠券 -->
-    <block wx:if="{{isShowGetCoupon}}">
-      <view class="get-coupon" catchtap="handleHideCoupon">
-        <scroll-view scroll-y class="get-coupon-box" catchtap="handleStopPropergation" animation="{{slideInDown}}">
-          <!-- 区域标题 -->
-          <view class="area-title" wx:if="true">
-            <view class="line"></view>
+        <view class="info-list" bindtap="handlePopCoupon">
+          <view>
+            <image src="../../images/icon07.png"></image>
+          </view>
+          <view>
             <text>领取优惠券</text>
-            <view class="line"></view>
           </view>
-          <block wx:for="{{coupons}}" wx:key="key">
-            <template is="coupon" data="{{item}}"></template>
+          <view>
+            <image src="../../images/icons01.png"></image>
+          </view>
+        </view>
+      </view>
+      <!-- 本店其它商品 -->
+      <view class="products">
+        <!-- 区域标题 -->
+        <view class="area-title" wx:if="true">
+          <view class="line"></view>
+          <text>本店其它商品</text>
+          <view class="line"></view>
+        </view>
+        <!-- 商品列表 -->
+        <view class="pro-list">
+          <block wx:for="{{listData}}" wx:key="key">
+            <navigator url="./prodetails?goodsid={{item.goodsid}}&shopid={{item.shopid}}">
+              <template is="pro-list" data="{{item,index}}"></template>
+            </navigator>
           </block>
-          <view class="get-coupon-placeholder"></view>
-          <view class="geted-coupon" catchtap="handleHideCoupon">
-            <text>确定</text>
-          </view>
-        </scroll-view>
+        </view>
+        <text class="bottom-placeholder">没有更多商品啦</text>
       </view>
-    </block>
-    <!-- 立即购买 -->
-    <block wx:if="{{isShowBuyLayer}}">
-      <view class="buy-layer-warp" catchtap="handleHideBuyLayer">
-        <scroll-view scroll-y class="buy-layer" catchtap="handleStopPropergation" animation="{{slideInDown}}">
-          <view class="buy-layer-padding">
-            <!-- 头部 -->
-            <view class="buy-layer-header">
-              <view>
-                <image src="../../images/pro01.png"></image>
-              </view>
-              <view>
-                <text>一乐拉面</text>
-                <text>￥ 9.9</text>
-              </view>
+      <!-- 购买 -->
+      <view class="buy">
+        <view catchtap="handleGoToShop">
+          <image src="../../images/icon08.png"></image>
+          <text>店铺</text>
+        </view>
+        <view catchtap="handleCollection">
+          <image src="{{isCollectioned?'../../images/icon09-active.png':'../../images/icon09.png'}}"></image>
+          <text style="color:{{isCollectioned?'#02c1c9':'#666'}};">{{isCollectioned?'已收藏':'收藏'}}</text>
+        </view>
+        <view catchtap="handlePopBuyLayer">
+          <text>立即购买</text>
+        </view>
+      </view>
+      <!-- 领取优惠券 -->
+      <block wx:if="{{isShowGetCoupon}}">
+        <view class="get-coupon" catchtap="handleHideCoupon">
+          <scroll-view scroll-y class="get-coupon-box" catchtap="handleStopPropergation" animation="{{slideInDown}}">
+            <!-- 区域标题 -->
+            <view class="area-title" wx:if="true">
+              <view class="line"></view>
+              <text>领取优惠券</text>
+              <view class="line"></view>
             </view>
-            <!-- 选择数量 -->
-            <view class="choose-num">
-              <view>
-                <text>购买数量</text>
-              </view>
-              <view>
-                <text catchtap="handleReduceProductNumber">-</text>
-                <text>{{productNumber}}</text>
-                <text catchtap="handleAddProductNumber">+</text>
-              </view>
-            </view>
-            <!-- 如果是酒店显示选择日期 -->
-            <block wx:if="{{isHotel}}">
-              <view class="choose-date">
-                <view>
-                  <text>选择日期</text>
-                </view>
-                <view>
-                  <picker mode="date" value="{{date}}" start="{{startDate}}" end="{{endDate}}" bindchange="bindDateChange">
-                    <view class="picker">{{date}}</view>
-                  </picker>
-                </view>
-              </view>
+            <block wx:if="{{hasCoupon}}">
+              <block wx:for="{{coupons}}" wx:key="key">
+                <template is="coupon" data="{{item}}"></template>
+              </block>
             </block>
-            <!-- 使用优惠券 -->
-            <view class="use-coupon">
-              <text>使用优惠券</text>
-              <scroll-view scroll-x>
-                <view class="use-coupon-box">
-                  <view class="use-coupon-item active" id="aa">满9.9减1</view>
-                  <view class="use-coupon-item" bindtap="test" id="bb">满9.9减1</view>
-                  <view class="use-coupon-item">满9.9减1</view>
-                  <view class="use-coupon-item">满9.9减1</view>
-                  <view class="use-coupon-item">满9.9减1</view>
+            <block wx:else>
+              <view class="">暂无优惠券</view>
+            </block>
+            <view class="get-coupon-placeholder"></view>
+            <view class="geted-coupon" catchtap="handleHideCoupon">
+              <text>确定</text>
+            </view>
+          </scroll-view>
+        </view>
+      </block>
+      <!-- 立即购买 -->
+      <block wx:if="{{isShowBuyLayer}}">
+        <view class="buy-layer-warp" catchtap="handleHideBuyLayer">
+          <scroll-view scroll-y class="buy-layer" catchtap="handleStopPropergation" animation="{{slideInDown}}">
+            <view class="buy-layer-padding">
+              <!-- 头部 -->
+              <view class="buy-layer-header">
+                <view>
+                  <image src="../../images/pro01.png"></image>
                 </view>
-              </scroll-view>
+                <view>
+                  <text>{{goodsName}}</text>
+                  <text>￥ {{price}}</text>
+                </view>
+              </view>
+              <!-- 选择数量 -->
+              <view class="choose-num">
+                <view>
+                  <text>购买数量</text>
+                </view>
+                <view>
+                  <text catchtap="handleReduceProductNumber">-</text>
+                  <text>{{productNumber}}</text>
+                  <text catchtap="handleAddProductNumber">+</text>
+                </view>
+              </view>
+              <!-- 如果是酒店显示选择日期 -->
+              <block wx:if="{{isHotel}}">
+                <view class="choose-date">
+                  <view>
+                    <text>选择日期</text>
+                  </view>
+                  <view>
+                    <picker mode="date" value="{{date}}" start="{{startDate}}" end="{{endDate}}" bindchange="bindDateChange">
+                      <view class="picker">{{date}}</view>
+                    </picker>
+                  </view>
+                </view>
+              </block>
+              <!-- 使用优惠券 -->
+              <view class="use-coupon">
+                <text>使用优惠券</text>
+                <scroll-view scroll-x>
+                  <view class="use-coupon-box">
+                    <view class="use-coupon-item" id="aa">暂无优惠券</view>
+                    <!-- <view class="use-coupon-item active" bindtap="test">满9.9减1</view>
+                    <view class="use-coupon-item">满9.9减1</view>
+                    <view class="use-coupon-item">满9.9减1</view>
+                    <view class="use-coupon-item">满9.9减1</view> -->
+                  </view>
+                </scroll-view>
+              </view>
             </view>
-          </view>
-          <!-- <view class="buy-layer-placeholder"></view> -->
-          <view class="buy-submit" catchtap="handleHideBuyLayer">
-            <view>总计
-              <text>￥ 9.9</text>
+            <!-- <view class="buy-layer-placeholder"></view> -->
+            <view class="buy-submit" catchtap="handleHideBuyLayer">
+              <view>总计
+                <text>￥ {{price*productNumber}}</text>
+              </view>
+              <text>确定</text>
             </view>
-            <text>确定</text>
-          </view>
-        </scroll-view>
-      </view>
-    </block>
-  </scroll-view>
-</view>
+          </scroll-view>
+        </view>
+      </block>
+    </scroll-view>
+  </view>
+</block>
+<block wx:else>
+  <view class="page-on-load">页面加载中...</view>
+</block>
