--- a/pages/shopdetails/shopdetails.wxml
+++ b/pages/shopdetails/shopdetails.wxml
@@ -1,63 +1,68 @@
 <!--pages/components/shopdetail/shopdetails.wxml-->
 <import src="../../template/view/pro-list.wxml" />
 <import src="../../template/view/coupon.wxml" />
-<view class="container">
-  <!-- 海报图 -->
-  <view class="header">
-    <image src="https://www.91tuoguan.cn/{{shopImg}}" mode="widthFix"></image>
+<block wx:if="{{loaded}}">
+  <view class="container">
+    <!-- 海报图 -->
+    <view class="header">
+      <image src="https://www.91tuoguan.cn/{{shopImg}}" mode="widthFix"></image>
+    </view>
+    <!-- 列表信息 -->
+    <view class="info">
+      <view class="info-header">
+        <view class="top">
+          <text>{{shopName}}</text>
+          <text></text>
+        </view>
+        <view class="bottom">
+          <text>月销{{monthSum}}</text>
+          <text>综合评分{{score}}</text>
+          <text>{{distance}}</text>
+        </view>
+      </view>
+      <view class="info-list" catchtap="handleLocation">
+        <view>
+          <image src="../../images/icon05.png"></image>
+        </view>
+        <view>
+          <text>{{address}}</text>
+        </view>
+        <view>
+          <image src="../../images/icons01.png"></image>
+        </view>
+      </view>
+      <view class="info-list" catchtap="handleMakePhone">
+        <view>
+          <image src="../../images/icon06.png"></image>
+        </view>
+        <view>
+          <text>{{phone}}</text>
+        </view>
+        <view>
+          <image src="../../images/icons01.png"></image>
+        </view>
+      </view>
+    </view>
+    <!-- 本店特色商品 -->
+    <view class="products">
+      <!-- 区域标题 -->
+      <view class="area-title" wx:if="true">
+        <view class="line"></view>
+        <text>本店特色商品</text>
+        <view class="line"></view>
+      </view>
+      <!-- 商品列表 -->
+      <view class="pro-list">
+        <block wx:for="{{listData}}" wx:key="key">
+          <navigator url="../prodetails/prodetails?goodsid={{item.goodsid}}&shopid={{item.shopid}}">
+            <template is="pro-list" data="{{item,index}}"></template>
+          </navigator>
+        </block>
+      </view>
+      <text class="bottom-placeholder">{{isNull?'本店暂无商品':'没有更多商品啦'}}</text>
+    </view>
   </view>
-  <!-- 列表信息 -->
-  <view class="info">
-    <view class="info-header">
-      <view class="top">
-        <text>{{shopName}}</text>
-        <text></text>
-      </view>
-      <view class="bottom">
-        <text>月销{{monthSum}}</text>
-        <text>综合评分{{score}}</text>
-        <text>{{distance}}</text>
-      </view>
-    </view>
-    <view class="info-list" catchtap="handleLocation">
-      <view>
-        <image src="../../images/icon05.png"></image>
-      </view>
-      <view>
-        <text>{{address}}</text>
-      </view>
-      <view>
-        <image src="../../images/icons01.png"></image>
-      </view>
-    </view>
-    <view class="info-list" catchtap="handleMakePhone">
-      <view>
-        <image src="../../images/icon06.png"></image>
-      </view>
-      <view>
-        <text>{{phone}}</text>
-      </view>
-      <view>
-        <image src="../../images/icons01.png"></image>
-      </view>
-    </view>
-  </view>
-  <!-- 本店特色商品 -->
-  <view class="products">
-    <!-- 区域标题 -->
-    <view class="area-title" wx:if="true">
-      <view class="line"></view>
-      <text>本店特色商品</text>
-      <view class="line"></view>
-    </view>
-    <!-- 商品列表 -->
-    <view class="pro-list">
-      <block wx:for="{{listData}}" wx:key="key">
-        <navigator url="../prodetails/prodetails?goodsid={{item.goodsid}}&shopid={{item.shopid}}">
-          <template is="pro-list" data="{{item,index}}"></template>
-        </navigator>
-      </block>
-    </view>
-    <text class="bottom-placeholder">没有更多商品啦</text>
-  </view>
-</view>
+</block>
+<block wx:else>
+  <view class="page-on-load">页面加载中...</view>
+</block>
