--- a/pages/about/about.wxss
+++ b/pages/about/about.wxss
@@ -42,13 +42,25 @@
 }
 
 .header .top .rside {
-  width: 64rpx;
-  padding: 68rpx 26rpx 0;
+  width: 146rpx;
+  padding: 58rpx 0;
+  text-align: right;
+  padding-right: 24rpx;
 }
 
 .header .top .rside image {
   width: 64rpx;
   height: 64rpx;
+  /* display: block;
+  margin: 0 auto; */
+}
+
+.header .top .rside text {
+  display: block;
+  /* text-align: center; */
+  color: #fff;
+  font-size: 24rpx;
+  padding: 2rpx 0 0;
 }
 
 .header .bottom {
