--- a/pages/bindphone/bindphone.wxml
+++ b/pages/bindphone/bindphone.wxml
@@ -5,6 +5,6 @@
       <input type="number" maxlength="6" placeholder="请输入验证码" placeholder-class="placeholder" name="verfcode" />
       <text bindtap="handleGetVerf" style="background-color:{{being?'#999':'#02c1c9'}} ;">{{being?time:'获取验证码'}}</text>
     </view>
-    <button formType="submit">立即绑定</button>
+    <button formType="submit">{{phone ? '立即修改' : '立即绑定'}}</button>
   </form>
 </view>
