--- a/pages/search/search.wxml
+++ b/pages/search/search.wxml
@@ -32,7 +32,7 @@
     </view>
     <block wx:if="{{isSearched}}">
       <view class="load-more-pro">
-        <text>{{isLastPage?'已经没有等多内容了':'加载中...'}}</text>
+        <text>{{isLastPage?'已经没有更多内容了':loadingOrNoData}}</text>
       </view>
     </block>
   </scroll-view>
