--- a/pages/search/search.wxml
+++ b/pages/search/search.wxml
@@ -6,7 +6,7 @@
     <view class="header">
       <view class="search-box">
         <icon type="search" size="12" color="#a6a6a6" />
-        <input bindinput="recordSearchKeyword" bindconfirm="handleSearch" confirm-type="search" placeholder="拉面" placeholder-style="height:56rpx;" focus="true" />
+        <input bindinput="recordSearchKeyword" bindconfirm="handleSearch" confirm-type="search" placeholder="情侣房间" placeholder-style="height:56rpx;" focus="true" />
       </view>
       <view class="search-btn" bindtap="handleSearch">
         <text>搜索</text>
