v:0.0.8 修复第一次点击拒绝授权再点击授权时不上传用户信息问题

--- a/pages/about/about.wxml
+++ b/pages/about/about.wxml
@@ -30,7 +30,7 @@
                 <text>当前佣金</text>
               </view>
               <view class="rside">
-                <text>{{info.parent_name}}</text>
+                <text>{{!info.parent_name?'无':info.parent_name}}</text>
                 <text>{{info.childnum}}</text>
                 <text>{{info.paiming}}</text>
                 <navigator url="../commission/commission?childnum={{info.childnum}}&commission={{info.commission}}&paiming={{info.paiming}}&totalcommission={{info.totalcomm}}">
