--- a/pages/qrcode/qrcode.wxss
+++ b/pages/qrcode/qrcode.wxss
@@ -19,14 +19,14 @@
   right: 0;
   bottom: 0;
   margin: auto;
-  border: 9rpx solid #d44c68;
+  border: 9rpx solid #fff500;
 }
 
 .userphoto {
   /*width: 18.6666666667%;
   height: 11.2947526236%;*/
-  width: 140rpx;
-  height: 140rpx;
+  width: 142rpx;
+  height: 142rpx;
   position: absolute;
   left: 0;
   top: 0;
@@ -35,6 +35,7 @@
   margin: auto;
   z-index: 15;
   border-radius: 100%;
+  border: 0;
 }
 
 
